...
              ],
            ),
            const SizedBox(height: 30),

            FilledButton(
              onPressed: _submit,
              child: const Text('Thêm vào nhật ký'),
            ),
          ],
        ),
      ),
    );
  }
...
